# polymarket-trader-bot

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  docker-compose.prod.yml  docker-compose.yml  polymarket.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
backtest/: engine.py  events.py  fill_model.py  metrics.py  portfolio.py  report.py
config/: logging.py  schemas.py  settings.py  strategies.yaml
dashboard/: Dockerfile  app.py
dashboard/static/: dashboard.js  index.html  style.css
data/: db.py  models.py  repository.py  validate.py
data/fetchers/: _test_clob.py  clob_fetcher.py  gamma_fetcher.py  pmxt_fetcher.py  weather_fetcher.py
db/: init.sql
live/: alerting.py  circuit_breaker.py  dashboard.py  data_stream.py  db.py  executor.py  monitor.py  risk_manager.py  scheduler.py  trading_loop.py
llm/: cache.py  calibration.py  decision_engine.py  estimator.py  prompt_builder.py  response_parser.py
llm/prompts/: ai_tech.txt  (+4 more)
news/: fetcher.py  relevance.py  sentiment.py  store.py
scripts/: deploy_vps.sh  paper_report.py  prepare_backtest_data.py  run_phase3_backtest.py  run_phase4_backtest.py  switch_strategy.sh
strategies/: base_strategy.py  calibration_betting.py  market_maker.py  momentum.py  sum_to_one_arb.py  value_betting.py  weather_betting.py
tests/: acceptance_phase1.py  test_engine.py  test_fetchers.py  test_llm.py  test_metrics.py  test_news.py  test_phase5.py  test_phase6.py  test_smoke.py  test_strategies.py  test_validate.py  test_value_betting.py  test_weather_betting.py
(+4 files in other folders)
