[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "polymarket-trader-bot"
version = "0.1.0"
description = "Automated research-grade trading bot for Polymarket prediction markets"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "data*", "strategies*", "backtest*", "live*", "news*", "llm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
